# icd11foundation

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: pipeline_incidents.md  plan.md  release_notes.md  report.md
linkml/: mondo_source_schema.yaml
scripts/: acquire.py  extract.py  repro_funowl_literal_assertion.py  sanitize_literals_for_owl_export.py  verify.py
sparql/: count_classes_by_top_level.sparql
src/icd11foundation/: datamodel.py
